ORP-215 corrected alignment

--- a/client/src/style/sass/common/_node-right-panel.scss
+++ b/client/src/style/sass/common/_node-right-panel.scss
@@ -327,6 +327,11 @@
 
     &__value {
       font-size: 14px;
+      color: #616161;
+    }
+
+    &__value-wrap {
+      padding-left: 10px;
     }
   }
 }
